--- a/style.css
+++ b/style.css
@@ -64,13 +64,19 @@
     margin-left: 3rem;
 }
 .task-list input[type="checkbox"]{
-    transform: scale(1.4);
+    transform: scale(1.7);
 }
 
 .task-list label{
-    border: solid;
+    /* border: solid; */
+    background-color: rgb(234, 246, 234);
     width: 80rem;
-    margin-left: 1rem;
+    margin: 0.5rem 0 0.5rem 1rem;
+    box-sizing: border-box;
+    padding: none;
+    font-size: 1.5rem;
+    border-radius: 0.5rem;
+
 }
 
 .delBtn{
@@ -82,6 +88,15 @@
    
 }
 .delBtn img{
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2rem;
+    height: 2rem;
 }
+
+.delBtn:hover .del-img{
+    transition: transform .6s ease-in-out;
+    transform: rotate(180deg);
+}
+
+/* .task-list:hover label{
+    box-shadow: 0.2rem 0.4rem;
+} */
